--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,8 @@ oauthlib==3.1.1
 psycopg2-binary==2.8.6
 pycparser==2.20
 PyJWT==2.1.0
+pymemcache==3.4.4
+python-memcached==1.59
 python3-openid==3.2.0
 pytz==2021.1
 requests==2.25.1
